poc-aks/trips_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: trips
  name: trips
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: trips
    spec:
      containers:
      - image: registrynhi6414.azurecr.io/tripviewer/trips
        name: trips
        ports:
        - containerPort: 80  
        
        resources: {}
        
        # https://kubernetes.io/docs/tasks/inject-data-application/define-environment-variable-container/
status: {}
