poc-aks/userprofile_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: userprofile
  name: userprofile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: userprofile
    spec:
      containers:
      - image: registrynhi6414.azurecr.io/tripviewer/userprofile
        name: userprofile
        resources: {}
        
        # https://kubernetes.io/docs/tasks/inject-data-application/define-environment-variable-container/
status: {}
