poc-aks/poi_svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: poi
  name: poi
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: poi
  type: ClusterIP
status:
  loadBalancer: {}
